# devops-string-premade

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
src/stringstandardization/: stringstd.py
test/: test_stringstd.py
